--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -1,15 +1,3 @@
 {
-  "name": "Game of Homes Development Environment",
-  "image": "mcr.microsoft.com/devcontainers/universal:2",
-  
-  // Configure tool-specific properties.
-  "customizations": {
-    // Configure properties specific to VS Code.
-    "vscode": {
-      // Add the IDs of extensions you want installed when the container is created.
-      "extensions": [
-        "ms-dotnettools.csharp"
-      ]
-    }
-  }
+  "image": "mcr.microsoft.com/devcontainers/universal:2"
 }
